discussion/kv_engine/184459/184459_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54958: Move the protocol bits of Observe to the core

Separate out the bits for the protocol encoding from ep-engine
and perform that in the core.

Given that the core supports a state machinery for the command
we don't need to redo all keys every time we have to block for
a key; and may continue to the next key.

@todo move the constants from protocol_binary.h to somewhere
else and add remap in the core.

Change-Id: I2339309b5e4f741f0bef54eb3b72487b5204f779

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2023-01-04 17:06:17.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-04 17:41:29.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51648/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51648/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22321/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/observe_context.h:33:10: error: no template named "deque" in namespace "std" [clang-diagnostic-error]
    std::deque<std::pair<Vbid, DocKey>> keys;
         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22321/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/observe_context.h:33:10:
error: no template named "deque" in namespace "std" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22321/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43358/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/protocol/mcbp/observe_context.h:33:10:
error: no template named "deque" in namespace "std"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43358/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24787/ : FAILURE

Compile error at [2023-01-04T17:12:46.357Z] ../kv_engine/daemon/protocol/mcbp/observe_context.h:33:10:
error: ?deque? in namespace ?std? does not name a template type
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24787/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21945/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12042/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23891/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1083/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12129/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24365/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25647/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32784/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
